--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -11,6 +11,7 @@
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779125.md#1">朱同：没有暴徒，只有暴政</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778817.md#1">港人心声：不想看到宝岛成为第二个香港</a><br>
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738121.md#1">【思想领袖】戴耀延：香港抗议者的智慧（上）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777961.md#1">王友群：中共利用伊朗问题煽风点火真相透视</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777869.md#1">周晓辉：伊朗报复美国雷声大 中俄动作频频</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777810.md#1">颜丹：人均一万美元与人手一张选票的价值</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776203.md#1">黄清于：保持善念 躲过中共引来的天灾</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775350.md#1">袁斌：环时变相为苏莱曼尼唱挽歌被网民打脸</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775628.md#1">【名家专栏】社交媒体成为教师有效交流平台</a><br>
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775572.md#1">【名家专栏】百年前已证明社会主义必失败</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778636.md#1">【专访】台立委黄国昌：中共渗透威胁多严重</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778360.md#1">【翻墙必看】两神秘人对王立强发死亡威胁</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779545.md#1">年幼时逃离伊朗 美军航母舰长现被派至中东</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779563.md#1">青海省公安厅前副厅长涉受贿等罪被起诉</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778877.md#1">澳洲警方：蔡正元孙天群威胁利诱王立强</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778800.md#1">港专家向大陆喊话：尽快公布病毒基因图谱</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777700.md#1">印尼向争议海域派遣战机巡航 北京低调</a><br>
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738121.md#1">【思想领袖】戴耀延：香港抗议者的智慧（上）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779137.md#1">售价贵服务差 天津百年老店狗不理陷困境</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775005.md#1">分析：台大选如何影响日本国防和亚太安全</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779538.md#1">中联办主任骆惠宁与林郑会面后未见传媒</a><br>
